# Physics_Formula_Class1

./: .gitignore  A_mat.txt  Angle.cpp  Angle.h  Asteroid.h  AtomicPhysics.h  B_mat.txt  BinarySearchTree.h  BinarySpacePartition.h  Boundaries.h  Bounds.h  CMakeLists.txt  Circle.h  Circuits.h  Circular_Motion.h  CollisionPackage.h  Cone.h  Convexhull.cpp  Convexhull.h  Core.h  Cube.h  Cylinder.h  Distance.cpp  Distance.h  Drag.cpp  Drag.h  DynamicsAndForces.h  ETL.h  Elasticity.cpp  Elasticity.h  ElectricCharge.h  ElectricCurrent.h  ElectricPotential.h  ElectroMagneticInduction.h  ElectromagneticWaves.h  Energy.h  FluidDynamics.h  FluidStatics.h  Friction.h  Friction_coefficients.h  (+95 more)
My Inspector Results - Physics_Formula_Class/: My Inspector Results - Physics_Formula_Class.inspxeproj
My Inspector Results - Physics_Formula_Class/r000mi2/: r000mi2.inspxe
My Inspector Results - Physics_Formula_Class/r000mi2/config/: panes3.filter_pane.xml  panes3.hier_problems_pane.xml  runmc.options
My Inspector Results - Physics_Formula_Class/r001mi2/: r001mi2.inspxe
My Inspector Results - Physics_Formula_Class/r002mi3/: r002mi3.inspxe
My Inspector Results - Physics_Formula_Class/r003mi1-bad/: r003mi1-bad.inspxe
My Inspector Results - Physics_Formula_Class/r004mi3/: r004mi3.inspxe
My Inspector Results - Physics_Formula_Class/r005mi2/: r005mi2.inspxe
My Inspector Results - Physics_Formula_Class/r006mi2/: r006mi2.inspxe
My Inspector Results - Physics_Formula_Class/r008mi1/: r008mi1.inspxe
datasets/: cost.txt  thetaOut.txt
reactphysics3d/: reactphysics3d.h
(+82 files in other folders)
